# Breakout

./: CMakeLists.txt  README  blocks.txt  setup.sh
src/: ball.c  ball.h  blocks.c  blocks.h  button.c  button.h  colors.h  leaderboard.c  leaderboard.h  main.c  player.c  player.h  scene.c  scene.h  text.c  text.h
